--- a/Confidence_Ratings_Accuracy_Scores.ipynb
+++ b/Confidence_Ratings_Accuracy_Scores.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### RMSE for each proability level for pie charts ###\n",
-    "- are there differences in participantT's estimation of pie probabilities overall and between the pie types????"
+    "- are there differences in participant's estimation of pie probabilities overall and between the pie types????"
    ]
   },
   {
